# student-tracker

./: .env.example  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.yml  local.sh
frontend/: index.html  package.json  vite.config.ts
frontend/src/: App.tsx  api.ts  types.ts
frontend/src/components/: AdminPage.tsx  SubmitPage.tsx
migrations/: 001_initial.sql
src/: auth.rs  db.rs  git.rs  main.rs  models.rs
src/routes/: admin.rs  download.rs  mod.rs  public.rs
